--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.yahoo.explodncheese.random</groupId>
+  <groupId>random</groupId>
   <artifactId>PartyRoom</artifactId>
-  <version>1.0</version>
+  <version>2.2</version>
      <repositories>
        <repository>
            <id>bukkit-repo</id>
@@ -13,7 +13,7 @@
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>spigot</artifactId>
-           <version>spigot</version>
+           <version>spigot-1.9.4</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
