Synced main branch. Lost all previous commit messages... woops.

--- a/pom.xml
+++ b/pom.xml
@@ -2,18 +2,18 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>random</groupId>
   <artifactId>PartyRoom</artifactId>
-  <version>3.01</version>
-     <repositories>
-       <repository>
+  <version>3.21</version>
+     <pluginRepositories>
+       <pluginRepository>
            <id>bukkit-repo</id>
            <url>http://repo.bukkit.org/content/groups/public/</url>
-       </repository>
-   </repositories>
+       </pluginRepository>
+   </pluginRepositories>
       <dependencies>
        <dependency>
            <groupId>org.bukkit</groupId>
            <artifactId>spigot</artifactId>
-           <version>1.10</version>
+           <version>1.11</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
