Party Chests now use inventory proxies for viewing.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -24,6 +24,6 @@ permissions:
     deposit:
       default: true
     view:
-      default: true;
+      default: true
     bypass:
       default: op
